<resources>
    <string name="app_name">Wire Purse</string>
    <string name="multi_coin_wallet">Multi Currency Wallet</string>
    <string name="multi_coin_wallet_desc">Securely store multi crypto currencies</string>
    <string name="cutting_edge_sucurity">Cutting Edge Security</string>
    <string name="builtin_security_desc">
       Cutting edge security features to
        protect your funds from unauthorized access
    </string>
    <string name="builtin_exchange">Builtin Exchange</string>
    <string name="builtin_exchange_desc">Super easy to use crypto-currency exchange with fiat support</string>
    <string name="extra_premium_service">Extra Premium Services</string>
    <string name="extra_premium_service_desc">
        Extra premium  services available to you all at your convenience
    </string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_email">Login with Email</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="go_back">Go Back</string>
    <string name="valid_email_required">A valid email address is required</string>
    <string name="password_required">Password is Required</string>
    <string name="app_logo">App Logo</string>
    <string name="copyright_transcodium">&#169; Transcodium</string>
    <string name="secure_url_required">A Secure API endpoint is required</string>
    <string name="network_request_failed">Network Request failed, try again later</string>
    <string name="unexpected_error">An unexpected error occurred, try again later</string>
    <string name="code">Code</string>
    <string name="login_success">Login Successful</string>
    <string name="loading">Loading</string>
    <string name="login_progress_text">Stay calm, processing login</string>
    <string name="google_login_failed">Google Login Failed, Try again Later</string>
    <string name="ooops">Ooops!</string>
    <string name="unknown_social_provider">Unknown Social Name %1$s</string>
    <string name="social_account_verification">%1$s Social Account Verification</string>
    <string name="social_login_verification_info">
       Email address verification required, a verification code has been sent to your email,
       kindly check the inbox or spam box of the email address associated with this social account for the
        code.
    </string>
    <string name="verification_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="cancel">Cancel</string>
    <string name="resend">Resend</string>
    <string name="resend_after">Resend after</string>
    <string name="resending_verification_code">Resending Verification Code</string>
    <string name="code_sent_to_your_email">Code has been resent to your email</string>
    <string name="invalid_code">Invalid code</string>
    <string name="verifying_code">Verifying Code</string>
    <string name="rsa_data_encryption_failed">Initial Data Encryption Failed</string>
    <string name="rsa_data_decryption_failed">Initial Data Decryption Failed</string>
    <string name="data_encryption_error">Data dncryption failed 2, reinstall app if error persists</string>
    <string name="data_decryption_error">Data decryption failed 2, reinstall app if error persists</string>
    <string name="security_logout_message">Secure data processing failed, as a security measure you have been logged out, please relogin</string>
    <string name="encrypted_data_part_extract_error">Failed to extract encrypted data parts, reinstall app if error persists</string>
    <string name="data_decryption_failed_error">Data decryption failed, please reinstall app if error persists</string>
    <string name="facebook_login_failed">Facebook Login Failed</string>
    <string name="facebook_login_cancelled">Facebook Login Request cancelled</string>
    <string name="twitter_login_failed">Twitter Login Failed</string>
    <string name="missing_app_key">Missing App Key</string>
    <string name="initialization_error">Initialization Error</string>
    <string name="initialization_error_message">Pre  startup initialization checkup failed, App will close</string>
    <string name="ok">Okay !</string>
    <string name="reset_password">Reset Password</string>
    <string name="signup">Signup</string>
    <string name="critical_error_message">A critical error occurred, please relogin. (Code: %1$s)</string>
    <string name="failed_to_generate_security_keys">Failed to create security keys</string>
    <string name="auth_required">Authentication required</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="setting">Setting</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="wallet">Wallet</string>
    <string name="exchange">Exchange</string>
    <string name="w">w</string>
    <string name="e">e</string>
    <string name="current_balance">Current Balance</string>
    <string name="auth_not_found">Authentication not found</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="history">History</string>
    <string name="network_not_available">Network or internet connection cannot be detected,
        Please fix the issue and try again</string>
    <string name="updating">Updating..</string>
    <string name="more">More</string>
    <string name="server_request_failed">Server request failed, Try again later</string>
    <string name="date_colon">Date:</string>
    <string name="price_colon">Price:</string>
    <string name="hello_greeting">Hello !, %1$s</string>
    <string name="confirm_logout_message">You will be logged out, do you wish to continue ?</string>
    <string name="yes">Yes</string>
    <string name="no_comma_cancel">No, Cancel</string>
    <string name="logout_cancelled">Logout cancelled</string>
    <string name="no">No</string>
    <string name="http_error">HTTP Request Error</string>
    <string name="server_connection_failed">Server Connection Failed</string>
    <string name="deposit">Deposit</string>
    <string name="receive_space_asset">Receive %1$s</string>
    <string name="no_assets_available">No Assets available, contact support if problem persists</string>
    <string name="deposit_asset">Deposit Asset</string>
    <string name="unknown_asset">Unknown Asset %1$s</string>
    <string name="copy">Copy</string>
    <string name="copy_address">Copy Address</string>
    <string name="generate">Generate</string>
    <string name="address_copied_to_clipboard">Address copied to clipboard</string>
    <string name="app_loading_data">App is loading, kindly wait</string>
    <string name="send_space_asset">Send %1$s</string>
    <string name="send_to_address">Send To Address</string>
    <string name="send_to_user">Send To User</string>
    <string name="scan_with_camera">Scan With Camera</string>
    <string name="camera_permission_message">To use the scanner, please select \'Allow\' when prompted on camera\'s permission</string>
    <string name="camera_perm_denied">Camera Permission Denied</string>
    <string name="qr_scanner_message">Place barcode inside the box</string>
    <string name="scanner_toggle_torch">Volume up / down for torch</string>
    <string name="qrcode_has_empty_data">QRCode contains no data</string>
    <string name="unsupported_payment_address">Unsupported Payment Address</string>
    <string name="invalid_qr_code">QRCode does not contain a valid %1$s data</string>
    <string name="address">Address</string>
    <string name="asset_name_space_address">%1$s Address</string>
    <string name="amount">Amount</string>
    <string name="save_address">Save Address</string>
    <string name="label">Label</string>
    <string name="label_optional">Label (optional)</string>
    <string name="receipient_email_address">Recipient Email Address</string>
    <string name="amount_to_send">Amount To Send</string>
    <string name="operation_aborted_by_user">Operation aborted by user</string>
    <string name="set_app_pin_message">
        You are required to set an app access pin code, a 4 numeric characters
        which will be used to prevent any unauthorized access.
    </string>
    <string name="four_digits_pin_code">4 Digits Pin Code</string>
    <string name="confirm_pin_code">Confirm Pin Code</string>
    <string name="enable_fingerprint_support">Enable Fingerprint Support</string>
    <string name="save">Save</string>
    <string name="pincode_lenght_error">Pin code field requires a 4 numeric charaters</string>
    <string name="pincodes_dont_match">Pin codes do not match</string>
    <string name="enable_fingerprint_setting">
       Your device\'s fingerprint hardware is not enabled,
        you will be forwarded to settings to
        enable it before you proceed.
    </string>
    <string name="pincode_saved">Pincode saved successfully</string>
    <string name="enter_pincode">Enter Pin Code</string>
    <string name="_continue">Continue</string>
    <string name="fingerprint_init_failed">Failed to initialize fingerprint due to many failed attempts</string>
    <string name="fingerprint_auth_failed">Fingerprint authentication failed</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="fingerint_auth_msg">Kindly confirm your fingerprint to continue</string>
    <string name="fingerprint_auth_instruction">
        Touch your device\'s  fingerprint sensor
    </string>
    <string name="use_pin_code">Use Pin Code</string>
    <string name="use_fingerprint">Use Fingerprint</string>
    <string name="pin_code">Pin Code</string>
    <string name="idle_fingerprint_ui_closed">Idle fingerprint window closed to save resources</string>
    <string name="fingerprint_records_not_found">Your fingerprint data was not found on device, disabling fingerprint support</string>
    <string name="retry_msg">You have %1$s attempt</string>
    <string name="invalid_pincode">Invalid Pin code, you have %1$s attempt</string>
    <string name="in_app_auth_failed">
        InApp Authentication Failed, You have been logged out
    </string>
    <string name="in_app_auth_success">InApp Authentication Successful</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirm">Confirm</string>
    <string name="invalid_crypto_address">Invalid %1$s address</string>
    <string name="invalid_amount_to_send">Invalid amount to send</string>
    <string name="payment_id">Payment ID</string>
    <string name="recipient_address">Recipient Address</string>
    <string name="send_mode">Send Mode</string>
    <string name="internal">Internal</string>
    <string name="confirm_transfer">Confirm Transfer</string>
    <string name="fingerprint_failed_msg">Fingerprint failed to initialize or was closed by user</string>
    <string name="external">External</string>
    <string name="transactions">Transactions</string>
    <string name="type">Type</string>
    <string name="mode">Mode</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="hash">Hash</string>
    <string name="deposits">Deposits</string>
    <string name="withdrawals">Withdrawals</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="pending">Pending</string>
    <string name="processing">Processing</string>
    <string name="processed">Processed</string>
    <string name="date_range">Date Range</string>
    <string name="start_date_optional">Start Date (optional)</string>
    <string name="end_date_optional">End Date (optional)</string>
</resources>