<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp">

    <include
        android:id="@+id/dialogHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/dialog_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogHeader"
        app:layout_constraintBottom_toTopOf="@id/footerView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_range"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/blueGrey"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:focusableInTouchMode="true">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/startDateLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_date_optional"
                    style="@style/TextInputLayoutStyle"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/startDateTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:inputType="date"
                        android:cursorVisible="false"
                    />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/endDateLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/end_date_optional"
                    style="@style/TextInputLayoutStyle"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/endDateTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:inputType="date"
                        android:drawablePadding="8dp"
                         />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/blueGrey"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">


                <CheckBox
                    android:tag="mode_internal"
                    android:id="@+id/modeInternal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/internal"
                    android:theme="@style/AppTheme.CheckBox"
                    android:onClick="handleFilterCheckboxes"
                    />

                <CheckBox
                    android:tag="mode_external"
                    android:id="@+id/modeExternal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/external"
                    android:theme="@style/AppTheme.CheckBox"
                    android:onClick="handleFilterCheckboxes"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/blueGrey"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <CheckBox
                    android:tag="type_deposit"
                    android:id="@+id/typeDeposit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/deposits"
                    android:theme="@style/AppTheme.CheckBox"
                    android:onClick="handleFilterCheckboxes"
                    />

                <CheckBox
                    android:tag="type_withdrawal"
                    android:id="@+id/txTypeWithdrawals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/withdrawals"
                    android:theme="@style/AppTheme.CheckBox"
                    android:onClick="handleFilterCheckboxes"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/blueGrey"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <CheckBox
                    android:tag="status_pending"
                    android:id="@+id/statusPending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/pending"
                    android:theme="@style/AppTheme.CheckBox"
                    android:onClick="handleFilterCheckboxes"
                    />

                <CheckBox
                    android:tag="status_processed"
                    android:id="@+id/statusProcessed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/processed"
                    android:theme="@style/AppTheme.CheckBox"
                    android:onClick="handleFilterCheckboxes"
                    />

                <CheckBox
                    android:tag="status_processing"
                    android:id="@+id/statusProcessing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/processing"
                    android:theme="@style/AppTheme.CheckBox"
                    android:onClick="handleFilterCheckboxes"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <LinearLayout
        android:id="@+id/footerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="bottom|end">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/okBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:background="@android:color/transparent"
            android:textColor="@color/colorPrimary"
            />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>