<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransactionHistoryActivity"
    android:fitsSystemWindows="false">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="false"
        app:elevation="0dp">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
                app:elevation="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/goBack"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_arrow_back_white_24dp"
                        android:background="@null"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginEnd="20dp"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/transactions"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textColor="@color/whiteAlpha30"
                        app:layout_constraintStart_toStartOf="@id/goBack"
                        app:layout_constraintEnd_toEndOf="@id/refreshBtn"
                        app:layout_constraintTop_toTopOf="parent"
                        android:ellipsize="end"
                        app:layout_constrainedWidth="true"
                        />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/refreshBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_refresh"
                        android:background="@null"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="20dp"
                        android:foreground="?attr/selectableItemBackground"
                        />

                    <TextView
                        android:id="@+id/assetNameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/transactions"
                        android:textSize="16sp"
                        android:textColor="@color/whiteAlpha30"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:ellipsize="end"
                        android:layout_marginEnd="24dp"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        android:clickable="true"
        android:focusable="true">

        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/circular_progress_bar"
            android:layout_gravity="center"
             />


        <include
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            layout="@layout/reload_content_view"
            android:visibility="gone"
            />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal">
                <TableLayout
                    android:id="@+id/tableView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TableRow
                        android:layout_height="80dp"
                        android:divider="@color/blueGreyL3"
                        android:background="@color/colorPrimaryDark"
                        android:textAlignment="center"
                        android:paddingTop="30dp"
                        android:paddingBottom="12dp">

                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textAlignment="center"
                            android:padding="5dp"
                            />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/amount"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textAlignment="center"
                            android:padding="5dp"
                            />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/type"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:padding="5dp"
                            android:textAlignment="center"
                            />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/mode"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textAlignment="center"
                            android:padding="5dp"
                            />

                        <TextView
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:text="@string/confirmation"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textAlignment="center"
                            android:padding="5dp"
                            />


                        <TextView
                            android:layout_width="140dp"
                            android:layout_height="wrap_content"
                            android:text="@string/from"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textAlignment="center"
                            android:padding="5dp"
                            />

                        <TextView
                            android:layout_width="140dp"
                            android:layout_height="wrap_content"
                            android:text="@string/to"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textAlignment="center"
                            android:padding="5dp"
                            />

                        <TextView
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:text="@string/hash"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textAlignment="center"
                            android:padding="5dp"
                            />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/status"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textAlignment="center"
                            android:padding="5dp"
                            />
                    </TableRow>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    </androidx.recyclerview.widget.RecyclerView>
            </TableLayout>
        </HorizontalScrollView>
    </FrameLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/filterFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/toolbar"
        app:tint="@color/white"
        android:src="@drawable/ic_filter_list"
        app:backgroundTint="@color/colorAccent"
        android:layout_marginEnd="10dp"
        app:layout_anchorGravity="bottom|right|end"
        app:elevation="32dp"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>